# merkle-tree

./: Cargo.toml  flake.nix
src/: lib.rs
src/circuits/: mod.rs
src/circuits/insert/: circuit.rs  mod.rs  proof.rs
src/circuits/insert/circuit/: path.rs
src/circuits/merkle_gadget/: mod.rs
src/element/: mod.rs
src/tree/: insert_and_prove.rs  iter.rs  mod.rs  path.rs  proptest.rs
src/tree/repr/: mod.rs
src/tree/tests/: mod.rs
